--- a/source/layouts/home.haml
+++ b/source/layouts/home.haml
@@ -12,7 +12,7 @@
 
     = javascript_include_tag "modernizr"
     / = partial "gtm-head"
-    / = partial "css"
+    = partial "partials/css"
 
   %body{ :class => page_classes }
     / = partial "gtm-body"
