--- a/source/layouts/home.haml
+++ b/source/layouts/home.haml
@@ -29,8 +29,8 @@
           .nine.medium-9.columns.main-content-home.pad-0
             = yield
           .three.medium-3.columns.sidebar-right.home
-            / = partial "sidebar-right-home"
+            = partial "partials/sidebar-right-home"
       %footer.footer
-        / = partial "footer"
+        = partial "partials/footer"
 
     / = partial "js"
