added courses and prereq field

--- a/source/curriculum/list.html.haml
+++ b/source/curriculum/list.html.haml
@@ -2,4 +2,10 @@
 title: Course List
 ---
 
+%h1 Neuroengineering Curriculum Options
+
+%p Currently graduate Neuroengineering students enter through tracks within colleges and schools at Drexel. However, the goal of the tracks listed below is to bring all Neuroengineering students to a core of knowledge across disciplines so all can communicate effectively and work in interdisciplinary projects effectively. Most often currently, doctoral Neuroengineering at Drexel is entered in two different ways, through tracks in either BME or in the interdisciplinary Neuroscience programs. The goal of our joint faculty and our teaching in the tracks is to bring all graduate students to a common place where engineers understand Neuroscience and Neuroscientists understand engineers, while recognizing and in part playing to individual strengths, yet also fostering interdisciplinary growth 'out of the comfort zone'.
+
+%p Individual Colleges and Schools have differing core requirements which are part of their accreditation and missions. However, the Neuroengineering faculty aspire at some future point to have a common interdisciplinary curriculum that is approved across the participant Colleges and Schools.
+
 = partial "partials/courses"
