--- a/source/partials/_sidebar-right-home.html.haml
+++ b/source/partials/_sidebar-right-home.html.haml
@@ -1,5 +1,5 @@
 .home-panel
-  %h3 Recent Publications
+  %h3 Recent Publications <small>example</small>
   %ul.unstyled
     - data.publications[0..2].each do |pub|
       %li
