--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -175,3 +175,18 @@ ul.unstyled {
 .big-text{
   font-size: 120%;
 } 
+
+.research-areas {
+  span.label {
+    font-size: 120%;
+    line-height: 1.2em;
+    margin-bottom: 5px;
+  }
+}
+
+table.faculty {
+  td {
+    vertical-align: top;
+    
+  }
+}
