linked home slide to neuromechanics

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,7 +4,7 @@ title: "Home"
 ---
 
 %ul.bxslider
-  %li= image_tag "https://via.placeholder.com/225x150", title: "Research Project: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/sensation-to-action\">From Sensation to Action</a>"
+  %li= image_tag "https://via.placeholder.com/225x150", title: "Research Spotlight: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/neuromechanics\">Neuromechanics</a>"
 
 
 %h2 What is Neuroengineering?  
