--- a/source/partials/_logo.html.haml
+++ b/source/partials/_logo.html.haml
@@ -1,4 +1,4 @@
 .logo
   %h1.lockup
     = link_to config[:http_prefix] do
-      = image_tag "Bhandawat_informal.png"
+      = image_tag "Drexel-neuroengineering-white-gold.png"
