updated neus508 course list, added links on homepage

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,7 +13,11 @@ title: "Home"
 
 %p.big-text 
   %strong Drexel Neuroengineering
-  is a cross-campus effort, spearheaded by the School of Biomedical Engineering, Science and Health Systems and Drexel University College of Medicine, to educate the next generation of interdisciplinary brain scientists and bioengineers, by creating teams of students with a shared common language and similar quantitative bases and frameworks, even though each one originates from different original disciplines of expertise.
+  is a cross-campus effort, spearheaded by the Drexel University 
+  = link_to "School of Biomedical Engineering, Science and Health Systems", "https://drexel.edu/biomed" 
+  and 
+  = link_to "College of Medicine", "https://drexel.edu/medicine" 
+  , to educate the next generation of interdisciplinary brain scientists and bioengineers, by creating teams of students with a shared common language and similar quantitative bases and frameworks, even though each one originates from different original disciplines of expertise.
 
 %p.big-text 
   The 
@@ -43,3 +47,17 @@ title: "Home"
 
 %p.big-text
   However, since Neuroengineering is highly interdisciplinary, a grounding in many different STEM disciplines is a good starting point for Neuroengineering. 
+
+%p.big-text
+  %strong Plans of Study in Neuroengineering
+
+%p.big-text
+  In keeping with this understanding of Neuroengineering breadth and needs there are currently two routes into Neuroengineering concentrations across the campus:
+
+%ol
+  %li 
+    %p.big-text
+      = link_to "Through the Biomedical Engineering PhD Program", "https://drexel.edu/biomed/academics/graduate-programs/biomedical-engineering-phd-degree/"
+  %li 
+    %p.big-text
+      = link_to "Through the Neuroscience PhD Program", "https://drexel.edu/medicine/academics/graduate-school/neuroscience/"
