--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -155,6 +155,11 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.columns > img {
+  max-width: 400px;
+  margin-bottom: 1rem;
+}
+
 img.left {
   padding-right: 1em;
   padding-bottom: .5em;
