--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,19 +5,26 @@ title: "Home"
 
 %ul.bxslider
   %li= image_tag "neuro-page-image.jpg", title: "Research Area Spotlight: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/areas\#bci\">Brain-computer Interface</a>"
+  %li= image_tag "slide-nce.png", title: "Research Area Spotlight: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/areas\#neural-circuit\">Neural Circuit Engineering</a>"
+  %li= image_tag "slide-fnir.png", title: "Research Area Spotlight: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/areas\#human\">Human Neuroengineering</a>"
+  %li= image_tag "slide-faa.png", title: "Research Area Spotlight: <br><a class=\"more-link\" href=\"#{config[:http_prefix]}research/areas\#ergonomics\">Neuroergonomics</a>"
 
 
 %h2 What is Neuroengineering?  
-%p.big-text 
-  Neuroengineering is a highly interdisciplinary endeavor aimed at understanding computations within the brain and the processes controlled by these computations, and then leveraging this understanding for a multitude of industrial and medical applications. Neuroengineering draws on expertise from many disciplines including neuroscience, mathematics, physics, biomedical engineering and computer sciences. 
+.big-text
+  %p.big-text 
+    Neuroengineering is a highly interdisciplinary endeavor aimed at understanding computations within the brain and the processes controlled by these computations, and then leveraging this understanding for a multitude of industrial and medical applications. Neuroengineering draws on expertise from many disciplines including neuroscience, mathematics, physics, biomedical engineering and computer sciences. 
 
-%p.big-text 
-  %strong Drexel Neuroengineering
-  is a cross-campus effort, spearheaded by the Drexel University 
-  = link_to "School of Biomedical Engineering, Science and Health Systems", "https://drexel.edu/biomed" 
-  and 
-  = link_to "College of Medicine", "https://drexel.edu/medicine" 
-  , to educate the next generation of interdisciplinary brain scientists and bioengineers, by creating teams of students with a shared common language and similar quantitative bases and frameworks, even though each one originates from different original disciplines of expertise.
+  %p.big-text 
+    %strong Drexel Neuroengineering
+    is a cross-campus effort, spearheaded by the Drexel University 
+    = link_to "School of Biomedical Engineering, Science and Health Systems", "https://drexel.edu/biomed" 
+    and 
+    = link_to "College of Medicine", "https://drexel.edu/medicine" 
+    , to educate the next generation of interdisciplinary brain scientists and bioengineers, by creating teams of students with a shared common language and similar quantitative bases and frameworks, even though each one originates from different original disciplines of expertise.
+  %br
+  %br 
+  %br 
 
 .row
   .large-6.columns 
