--- a/source/faculty/overview.html.haml
+++ b/source/faculty/overview.html.haml
@@ -2,6 +2,29 @@
 layout: two-columns-left-nav
 title: Faculty Overview
 ---
-%h1= current_resource.data.title
+%h1 Co-Directors
+
+%h3 Vikas Bhandawat, PhD
+%p 
+  Associate Professor,
+  %br
+  School of Biomedical Engineering, Science and Health Systems
+  %br
+  = mail_to "vb468@drexel.edu", "Contact", class: "more-link"
+
+%br
+%br 
+
+%h3 Simon Giszter, PhD
+%p
+  Professor,
+  %br
+  Neurobiology & Anatomy, 
+  %br
+  College of Medicine 
+  %br
+  = mail_to "sg33@drexel.edu", "Contact", class: "more-link"
+%hr
+
 
 = partial "partials/faculty"
