--- a/source/partials/_faculty-core.haml
+++ b/source/partials/_faculty-core.haml
@@ -1,18 +1,17 @@
-- data.faculty.each do |f|
+- data.facultyCore.each do |f|
   .row
-    .small-12.large-5.columns
+    .small-12.large-4.columns
       %img{:src => f.photo, :alt => f.fullname, :style => "width: 120px;"}
+      %h5
+        = f.fullname
       %p
-        %strong
-          = f.fullname
-        %br
         %strong Email:
         = mail_to f.email
         %br
         %strong Office:
         = f.addr
         
-    .small-12.large-7.columns
+    .small-12.large-8.columns
       %p
         %strong Research: 
         = f.desc
