--- a/source/courses/list.html.haml
+++ b/source/courses/list.html.haml
@@ -3,7 +3,7 @@ layout: two-columns-left-nav
 title: Course List
 ---
 
-%h1 Neuroengineering Curriculum Options
+%h1 Neuroengineering Course Options
 
 %p Currently graduate Neuroengineering students enter through tracks within colleges and schools at Drexel. However, the goal of the tracks listed below is to bring all Neuroengineering students to a core of knowledge across disciplines so all can communicate effectively and work in interdisciplinary projects effectively. Most often currently, doctoral Neuroengineering at Drexel is entered in two different ways, through tracks in either BME or in the interdisciplinary Neuroscience programs. The goal of our joint faculty and our teaching in the tracks is to bring all graduate students to a common place where engineers understand Neuroscience and Neuroscientists understand engineers, while recognizing and in part playing to individual strengths, yet also fostering interdisciplinary growth 'out of the comfort zone'.
 
